Make sure all references have page numbers

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -298,6 +298,7 @@
   journal = {Bayesian Analysis},
   volume = {16},
   number = {2},
+  pages = {667--718},
   issn = {1936-0975},
   doi = {10.1214/20-BA1221},
   urldate = {2024-06-24},
@@ -502,6 +503,7 @@
   journal = {Statistical Science},
   volume = {16},
   number = {4},
+  pages = {351--367},
   issn = {0883-4237},
   doi = {10.1214/ss/1015346320},
   urldate = {2024-06-24},
@@ -518,6 +520,7 @@
   journal = {The Annals of Applied Probability},
   volume = {7},
   number = {1},
+  pages = {110--120},
   issn = {1050-5164},
   doi = {10.1214/aoap/1034625254},
   urldate = {2024-06-24},
@@ -574,6 +577,7 @@
   journal = {Statistical Science},
   volume = {7},
   number = {4},
+  pages = {457--472},
   issn = {0883-4237},
   doi = {10.1214/ss/1177011136},
   urldate = {2024-06-24},
@@ -606,6 +610,7 @@
   journal = {Statistical Science},
   volume = {36},
   number = {4},
+  pages = {518--529},
   issn = {0883-4237},
   doi = {10.1214/20-STS812},
   urldate = {2024-06-27},
@@ -677,7 +682,7 @@
 }
 
 @article{rizzoEnergyDistance2016,
-  title = {Energy Distance},
+  title = {Energy {{Distance}}},
   author = {Rizzo, Maria L. and Sz{\'e}kely, G{\'a}bor J.},
   year = {2016},
   month = jan,
@@ -702,6 +707,7 @@
   volume = {28},
   eprint = {1506.03039},
   primaryclass = {cs, math, stat},
+  pages = {226--234},
   publisher = {MIT Press},
   urldate = {2024-08-19},
   abstract = {To improve the efficiency of Monte Carlo estimation, practitioners are turning to biased Markov chain Monte Carlo procedures that trade off asymptotic exactness for computational speed. The reasoning is sound: a reduction in variance due to more rapid sampling can outweigh the bias introduced. However, the inexactness creates new challenges for sampler and parameter selection, since standard measures of sample quality like effective sample size do not account for asymptotic bias. To address these challenges, we introduce a new computable quality measure based on Stein's method that quantifies the maximum discrepancy between sample and target expectations over a large class of test functions. We use our tool to compare exact, biased, and deterministic sample sequences and illustrate applications to hyperparameter selection, convergence rate assessment, and quantifying bias-variance tradeoffs in posterior inference.},
@@ -764,6 +770,7 @@
   booktitle = {Proceedings of the 34th {{International Conference}} on {{Machine Learning}}},
   author = {Gorham, Jackson and Mackey, Lester},
   year = {2017},
+  pages = {1292--1301},
   publisher = {PLMR},
   address = {Sydney, Australia},
   doi = {10.48550/ARXIV.1703.01717},
@@ -795,6 +802,7 @@
   booktitle = {Proceedings of the 36th {{International Conference}} on {{Machine Learning}}},
   author = {Chen, Wilson Ye and Barp, Alessandro and Briol, Fran{\c c}ois-Xavier and Gorham, Jackson and Girolami, Mark and Mackey, Lester and Oates, {\relax Chris}. J.},
   year = {2019},
+  pages = {1011--1021},
   publisher = {PLMR},
   address = {Long Beach, California},
   doi = {10.48550/ARXIV.1905.03673},
@@ -830,4 +838,52 @@
   copyright = {arXiv.org perpetual, non-exclusive license},
   keywords = {Computation (stat.CO),FOS: Computer and information sciences,Machine Learning (cs.LG),Machine Learning (stat.ML)},
   file = {/home/artem/Zotero/storage/C4N5E2M7/Chen et al. - 2018 - Stein Points.pdf}
+}
+
+@article{parkBayesianLasso2008,
+  title = {The {{Bayesian Lasso}}},
+  author = {Park, Trevor and Casella, George},
+  year = {2008},
+  month = jun,
+  journal = {Journal of the American Statistical Association},
+  volume = {103},
+  number = {482},
+  pages = {681--686},
+  issn = {0162-1459, 1537-274X},
+  doi = {10.1198/016214508000000337},
+  urldate = {2024-08-23},
+  langid = {english},
+  file = {/home/artem/Zotero/storage/D5SR2JNG/Park and Casella - 2008 - The Bayesian Lasso.pdf}
+}
+
+@article{rockovaSpikeandSlabLASSO2018,
+  title = {The {{Spike-and-Slab LASSO}}},
+  author = {Ro{\v c}kov{\'a}, Veronika and George, Edward I.},
+  year = {2018},
+  month = jan,
+  journal = {Journal of the American Statistical Association},
+  volume = {113},
+  number = {521},
+  pages = {431--444},
+  issn = {0162-1459, 1537-274X},
+  doi = {10.1080/01621459.2016.1260469},
+  urldate = {2024-08-23},
+  langid = {english},
+  file = {/home/artem/Zotero/storage/KERCZPN4/Ročková and George - 2018 - The Spike-and-Slab LASSO.pdf}
+}
+
+@article{cockayneProbabilisticGradientsFast2021,
+  title = {Probabilistic {{Gradients}} for {{Fast Calibration}} of {{Differential Equation Models}}},
+  author = {Cockayne, Jonathan and Duncan, Andrew},
+  year = {2021},
+  month = jan,
+  journal = {SIAM/ASA Journal on Uncertainty Quantification},
+  volume = {9},
+  number = {4},
+  pages = {1643--1672},
+  issn = {2166-2525},
+  doi = {10.1137/20M1364424},
+  urldate = {2024-08-23},
+  langid = {english},
+  file = {/home/artem/Zotero/storage/U2SF4K5S/Cockayne and Duncan - 2021 - Probabilistic Gradients for Fast Calibration of Di.pdf}
 }
